# devspace-quickstart-rust

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  devspace.yaml  justfile
src/: main.rs
